--- a/test4.html
+++ b/test4.html
@@ -4,5 +4,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Page</title>
-    <script src="stuff3.js"></script>
+    <script src="task4.js"></script>
 </html>
